...
                                <rect key="frame" x="-176.33333333333334" y="682.66666666666663" width="141" height="30"/>
                                <color key="backgroundColor" name="AccentColor"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="ciN-g3-Om9" secondAttribute="height" multiplier="47:10" id="WwW-j3-Z49"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <state key="normal" title="Edit Profile">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="hgF-lA-iUO" kind="presentation" id="qs9-9X-odd"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="xe8-ab-8iy" firstAttribute="centerY" secondItem="wak-1s-yOE" secondAttribute="centerY" id="qbD-dc-xwS"/>
                            <constraint firstItem="LQi-uu-Rg6" firstAttribute="leading" secondItem="wak-1s-yOE" secondAttribute="leadingMargin" id="sMI-82-ZUK"/>
                            <constraint firstItem="Xf3-p6-ayd" firstAttribute="leading" secondItem="XEz-nK-hCG" secondAttribute="leading" id="trL-mf-uz5"/>
                            <constraint firstItem="xe8-ab-8iy" firstAttribute="centerX" secondItem="wak-1s-yOE" secondAttribute="centerX" id="zwh-WN-gc9"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="3Yq-BZ-KO7"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="avatar" destination="LQi-uu-Rg6" id="mqm-gb-8wY"/>
                        <outlet property="editButton" destination="ciN-g3-Om9" id="qM3-ux-06c"/>
                        <outlet property="profileMapView" destination="xe8-ab-8iy" id="BTO-5V-szx"/>
                        <outlet property="signNumberLabel" destination="XEz-nK-hCG" id="3dG-PK-ICL"/>
...
            <objects>
                <viewController storyboardIdentifier="EditProfileView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hgF-lA-iUO" customClass="EditProfileViewController" customModule="signposts_again" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Rk3-z5-csC">
                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter new username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GVs-ed-fAh">
                                <rect key="frame" x="55" y="132" width="325" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter photo url" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R6b-OK-WwM">
                                <rect key="frame" x="55" y="212" width="325" height="34"/>
...
                                <color key="textColor" systemColor="systemRedColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Gr-cX-xfh">
                                <rect key="frame" x="117.66666666666667" y="174" width="192.66666666666663" height="30"/>
                                <color key="backgroundColor" name="AccentColor"/>
                                <state key="normal" title="Update Username">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="updateUsernamePressed:" destination="hgF-lA-iUO" eventType="touchUpInside" id="rK8-MT-3Td"/>
                                    <segue destination="ttZ-sU-344" kind="unwind" unwindAction="backFromModal:" id="yRA-bu-JNy"/>
                                </connections>
...
            <point key="canvasLocation" x="404" y="485"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="y1g-V6-ZAS">
            <objects>
                <navigationController storyboardIdentifier="ProfileEntry" automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hqE-vd-yUI" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="" image="person" catalog="system" id="jW6-Vc-X70"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="upR-ms-WeS">
                        <rect key="frame" x="0.0" y="44" width="428" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
