<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="6ur-u2-laP">
            <objects>
                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="mdk-yq-jdQ" customClass="LoginViewController" customModule="signposts_again" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="GsA-5S-e27">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vr0-lB-yR6">
                                <rect key="frame" x="159" y="236" width="97" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c3h-yf-jqi">
                                <rect key="frame" x="159" y="309" width="97" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1v-nf-G0l">
                                <rect key="frame" x="159" y="107" width="47" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Sign In"/>
                                <connections>
                                    <action selector="signInBtnPressed:" destination="mdk-yq-jdQ" eventType="touchUpInside" id="0Kr-Bb-Oay"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Spc-hC-DAT"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <navigationItem key="navigationItem" id="pF5-LR-5rr"/>
                    <connections>
                        <outlet property="emailForm" destination="Vr0-lB-yR6" id="3fc-gj-oQt"/>
                        <outlet property="passwordForm" destination="c3h-yf-jqi" id="eOG-p1-Gc9"/>
                        <outlet property="signInButton" destination="n1v-nf-G0l" id="phK-BV-IBe"/>
                        <segue destination="TkA-f1-Q0Z" kind="show" identifier="loggedInSeque" id="x48-k0-jzS"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="aZq-D4-YQf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1084" y="64"/>
        </scene>
        <!--Register View Controller-->
        <scene sceneID="f15-So-JPz">
            <objects>
                <viewController storyboardIdentifier="registerUserID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="B7e-Ym-208" customClass="RegisterViewController" customModule="signposts_again" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="saG-U3-w09">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Otm-yW-9p9">
                                <rect key="frame" x="159" y="282" width="97" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oeT-0G-iGT">
                                <rect key="frame" x="159" y="344" width="97" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pmW-rK-YSS">
                                <rect key="frame" x="147" y="114" width="97" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Sign up"/>
                                <connections>
                                    <action selector="signUpButtonPressed:" destination="B7e-Ym-208" eventType="touchUpInside" id="FUN-nU-976"/>
                                    <segue destination="TkA-f1-Q0Z" kind="show" identifier="signingUp" id="6wu-cE-x7q"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="0Ss-Pk-Q9h"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <navigationItem key="navigationItem" id="b7c-nQ-ByH"/>
                    <connections>
                        <outlet property="emailForm" destination="Otm-yW-9p9" id="xNH-Ns-Nhj"/>
                        <outlet property="passwordForm" destination="oeT-0G-iGT" id="H90-OA-gQr"/>
                        <outlet property="signUpButton" destination="pmW-rK-YSS" id="hzh-I6-JY3"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="RGy-uw-lti" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="260" y="63"/>
        </scene>
        <!--Login Check Controller-->
        <scene sceneID="jGV-pE-BwC">
            <objects>
                <viewController id="mZV-pu-vhL" customClass="LoginCheckController" customModule="signposts_again" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="9fo-Gp-RMt">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="imJ-Oq-OAi">
                                <rect key="frame" x="166" y="182" width="42" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Log In"/>
                                <connections>
                                    <action selector="loginPressed:" destination="mZV-pu-vhL" eventType="touchUpInside" id="KiX-U0-ITF"/>
                                    <segue destination="mdk-yq-jdQ" kind="show" identifier="Click log in" id="De7-3M-bCS"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SLY-Up-Uxl">
                                <rect key="frame" x="159" y="261" width="57" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Register"/>
                                <connections>
                                    <action selector="registerPressed:" destination="mZV-pu-vhL" eventType="touchUpInside" id="3Cz-pU-ARJ"/>
                                    <segue destination="B7e-Ym-208" kind="show" identifier="Click register" id="qNQ-JD-vsL"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="jg6-Vb-bvP"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <connections>
                        <outlet property="logIn" destination="imJ-Oq-OAi" id="Jmo-rT-DBs"/>
                        <outlet property="registerButton" destination="SLY-Up-Uxl" id="2Jw-D7-7Dy"/>
                        <segue destination="TkA-f1-Q0Z" kind="show" identifier="Already logged in" id="Ge7-vb-adJ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Sz4-zt-Wzq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-458" y="-745"/>
        </scene>
        <!--Main-->
        <scene sceneID="mwe-Re-QBi">
            <objects>
                <viewControllerPlaceholder storyboardName="Main" id="TkA-f1-Q0Z" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="YSZ-it-J1b"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="CuV-4k-0hO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-458" y="64"/>
        </scene>
    </scenes>
    <inferredMetricsTieBreakers>
        <segue reference="6wu-cE-x7q"/>
    </inferredMetricsTieBreakers>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
