...
                            <constraint firstItem="z1I-a4-ZGx" firstAttribute="height" secondItem="ydO-Bq-Iwp" secondAttribute="height" id="MC3-hi-ccZ"/>
                            <constraint firstItem="z1I-a4-ZGx" firstAttribute="width" secondItem="ydO-Bq-Iwp" secondAttribute="width" id="nIs-Nw-0Wg"/>
                            <constraint firstItem="z1I-a4-ZGx" firstAttribute="centerY" secondItem="ydO-Bq-Iwp" secondAttribute="centerY" id="vcQ-Af-1uf"/>
                            <constraint firstItem="z1I-a4-ZGx" firstAttribute="centerX" secondItem="ydO-Bq-Iwp" secondAttribute="centerX" id="xhq-I7-SyR"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Explore" id="lag-Iv-cu0"/>
                    <connections>
                        <outlet property="signmap" destination="z1I-a4-ZGx" id="4dF-PZ-11B"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lRK-Be-ubI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="6546.3999999999996" y="135.38230884557723"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="xX8-30-an2">
            <objects>
                <navigationController storyboardIdentifier="MapNavigation" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="aSK-af-GVF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="" image="binoculars" catalog="system" id="ZSD-fh-OOh"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="rf5-if-Xx3">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
